# cliotp.rs

./: Cargo.toml
src/: db.rs  main.rs
src/subcommands/: add.rs  delete.rs  io.rs  list.rs  mod.rs  now.rs  ops.rs  update.rs
