[package]
name = "cliotp"
version = "0.1.0"
authors = ["zjhsdtc <zjhsdtc@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "1.0.5"
clap = "2.33.0"
r2d2_redis = "0.12.0"
structopt = "0.3"
ansi_term = "^0.11.0"
serde = "1.0.104"
serde_json = "1.0"
serde_derive = "1.0.104"

[dependencies.google-authenticator]
git = "https://github.com/zjhmale/google-authenticator-rust"
branch = "improvement"
